--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ runs:
   using: "composite"
   steps:
     - name: Commenting PR
-      if: ${{ github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened') }}
+      if: $GITHUB_HEAD_REF != $GITHUB_BASE_REF
       run: |
         echo "::add-mask::${{ inputs.accesstoken }}"
         npx violation-comments-to-github-command-line \
