--- a/action.yml
+++ b/action.yml
@@ -16,11 +16,10 @@ runs:
     - name: Commenting PR
       if: ${{ github.head_ref != github.base_ref }}
       run: |
-        echo "::add-mask::${{ secrets.GITHUB_TOKEN }}"
         npx violation-comments-to-github-command-line \
-          -ot ${{ secrets.GITHUB_TOKEN }} \
+          -ot ${{ github.token }} \
           -ro $(jq --raw-output .repo.owner.login "$GITHUB_EVENT_PATH") \
           -rn $(jq --raw-output .repo.name "$GITHUB_EVENT_PATH") \
           -prid $(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH") \
-          -v "${{ inputs.parser }}" "." "${{ inputs.regexp }}"
+          -v "${{ inputs.parser }}" "." "${{ inputs.regexp }}" ""
       shell: bash
