--- a/action.yml
+++ b/action.yml
@@ -18,8 +18,8 @@ runs:
       run: |
         npx violation-comments-to-github-command-line \
           -ot ${{ github.token }} \
-          -ro $(jq --raw-output .repo.owner.login "$GITHUB_EVENT_PATH") \
-          -rn $(jq --raw-output .repo.name "$GITHUB_EVENT_PATH") \
-          -prid $(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH") \
+          -ro ${{ github.repository_owner }} \
+          -rn ${{ github.event.repository.name }} \
+          -prid ${{ github.event.pull_request.number }} \
           -v "${{ inputs.parser }}" "." "${{ inputs.regexp }}" ""
       shell: bash
