fix: shell missing in action (refs #1)

--- a/action.yml
+++ b/action.yml
@@ -13,16 +13,17 @@ inputs:
 runs:
   using: "composite"
   steps:
-      - name: Transorm static code analysis to SARIF
-        if: ${{ (success() || failure()) }}
-        run: |
-          npx violations-command-line -sarif sarif-report.json \
-          -v "FINDBUGS" "." ".*build/reports/spotbugs/main\.xml$" "Spotbugs" \
-          -v "CHECKSTYLE" "." ".*build/reports/checkstyle/main\.xml$" "Checkstyle" \
-          -v "PMD" "." ".*build/reports/pmd/main\.xml$" "PMD" \
-          -v "JUNIT" "." ".*/build/test-results/test/TEST-.*\.xml$" "JUNIT"
-      - uses: github/codeql-action/upload-sarif@v3
-        if: ${{ (success() || failure()) }}
-        with:
-          sarif_file: sarif-report.json
-          category: violations-lib
+    - name: Transorm static code analysis to SARIF
+      if: ${{ (success() || failure()) }}
+      shell: bash
+      run: |
+        npx violations-command-line -sarif sarif-report.json \
+        -v "FINDBUGS" "." ".*build/reports/spotbugs/main\.xml$" "Spotbugs" \
+        -v "CHECKSTYLE" "." ".*build/reports/checkstyle/main\.xml$" "Checkstyle" \
+        -v "PMD" "." ".*build/reports/pmd/main\.xml$" "PMD" \
+        -v "JUNIT" "." ".*/build/test-results/test/TEST-.*\.xml$" "JUNIT"
+    - uses: github/codeql-action/upload-sarif@v3
+      if: ${{ (success() || failure()) }}
+      with:
+        sarif_file: sarif-report.json
+        category: violations-lib
